[gd_scene load_steps=2 format=3 uid="uid://3oul5x4r6x1l"]

[ext_resource type="Script" path="res://scripts/ui/market/market_resource_container.gd" id="1_rbb7b"]

[node name="MarketResourceContainer" type="MarginContainer"]
custom_minimum_size = Vector2(0, 20)
offset_right = 146.0
offset_bottom = 30.0
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
script = ExtResource("1_rbb7b")

[node name="BackgroundRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 1
color = Color(0, 0, 0, 0.329412)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 0

[node name="ResourceNameLabel" type="Label" parent="MarginContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 6
text = "<resource_name>"

[node name="ResourceAmountLabel" type="Label" parent="MarginContainer"]
texture_filter = 2
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.621524, 0.621524, 0.621524, 1)
theme_override_font_sizes/font_size = 6
text = "<resource_amount>"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
